--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "~3.4.0"
+    "express": "~3.4.0",
+    "knox": "~0.8.6"
   }
 }
