--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "dependencies": {
     "express": "~3.4.0",
     "knox": "~0.8.6"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-usemin": "~0.1.12",
+    "grunt-rev": "~0.1.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-replacer": "~0.1.0"
   }
 }
